2013-09-01  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* usbasp.c: Add more trace output, by now only for the TPI
	functions.

2013-08-31  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* usbasp.c (usbasp_transmit): Add -vvvv trace output.

2013-08-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #39893: Verification failure with AVRISPmkII and Xmega
	* stk500v2.c (stk600_xprog_page_erase): Fix argument that is
	passed to stk600_xprog_memtype()

2013-07-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* fileio.c (elf2b): replace elf_getshstrndx() by
	elf_getshdrstrndx() as the former one is deprecated

2013-06-19  Rene Liebscher <R.Liebscher@gmx.de>

	use bitbanging on ftdi mpsse when wrong pins are used
	* avrftdi.c, avrftdi_private.h: added additional pin check 
	and bitbanging fallback
	* pindefs.[ch]: added a flag to enable/disable output
	* ft245r.c: changes because of added flag above

2013-05-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by "Malte" and John McCorquodale:
	patch #7876 JTAGICE mkII fails to connect to attiny if debugwire
	is enabled AND target has a very slow clock
	* jtagmkII.c (jtagmkII_getsync): When leaving debugWIRE mode
	temporarily, immediately retry with ISP, rather than leaving.
	* stk500v2 (stk500v2_program_enable): Implemented similar logic
	for the JTAGICE3.

2013-05-16  Rene Liebscher <R.Liebscher@gmx.de>

	* configure.ac: reactivate check for TYPE_232H, which does not
	exist in libftdi < 0.20
	* avrftdi*.*: changed include check for libftdi/libusb, deactivate
	232H if not available
	* ft245r.c: changed include check for libftdi/libusb

2013-05-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* main.c (main): Add option -l logfile.
	* avrdude.1: Document -l option.
	* doc/avrdude.texi: (Dito.)

2013-05-15  Rene Liebscher <R.Liebscher@gmx.de>

	* configure.ac: if both found libftdi and libftdi1 use only libftdi1
	* avrdude.conf.in: fixed buff pins of avrftdi programmers (low
	active buffer need now inverted numbers)